--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -4,44 +4,37 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>妖來妖去-商城</title>
+    <title>妖來妖去-小遊戲</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/allpage.css">
-    <script src="https://unpkg.com/vue@next"></script>
+    <link rel="stylesheet" href="css/game.css">
     <style>
-        /* shop */
-        .allproduct,
-        .bestseller,
-        .newproduct {
-            border-bottom: 4px solid #513A35;
-            padding-bottom: 20px;
-        }
-
+        /* monsters */
         .content-header-left,
         .content-header-right {
             display: inline-block;
         }
 
-        .content-header-right {
-            position: relative;
-            top: 8px;
-            display: flex;
-        }
-
-        .content-header-item-mgr {
-            margin-right: 20px;
-        }
-
-
         .col-10 {
             padding: 10px 0;
         }
 
-        .form-select {
-            width: 150px;
+        #changeimage {
+            position: relative;
+            display: inline-block;
+            width: 45px;
+            height: 45px;
+            background-image: url("resource/puzzle/options.png");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            cursor: pointer;
         }
 
+        .card-body {
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
 
         /* allpage */
     </style>
@@ -136,36 +129,98 @@
 
 
     <div class="main">
+
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10 content-header">
                     <div class="content-header-left">
-                        <img src="resource/icon/shop.svg" class="content-header-icon">
-                        <div class="content-header-title title-text-color">商城</div>
+                        <img src="resource/icon/game.svg" class="content-header-icon">
+                        <div class="content-header-title title-text-color">小遊戲</div>
                     </div>
-                    <div class="content-header-right">
-                        <select class="form-select content-text-color" aria-label="Default select example"
-                            id="selectproduct">
-                            <option value="newest" selected>最新</option>
-                            <option value="oldest">最舊</option>
-                            <option value="bestsell" disabled>熱銷(尚未完成)</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="container-lg">
-            <div class="row justify-content-center">
-                <div class="col-10">
-                    <div class="allproduct">
-                        <div class="row justify-content-center">
-                            <div class="col-10" id="card">
-                                <div class="row row-cols-1 row-cols-md-3 g-4" id="cardContent"></div>
-                            </div>
-                        </div>
+                    <div class="content-header-right">
+                        <div id="changeimage"></div>
                     </div>
                 </div>
+
+                <div id="wrapper">
+                    <div id="img-container">
+                        <div id="img-container-title">選擇妖怪拼圖</div>
+                        <div class="row row-cols-3 row-cols-md-3 row-cols-lg-4 g-4">
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="resource/puzzle/bird/frame.jpg" name="bird" class="card-img-top imgsel">
+                                    <div class="card-body">
+                                        <h5 class="card-title">婆娑鳥</h5>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="resource/puzzle/dog/frame.jpg" class="card-img-top imgsel" name="dog">
+                                    <div class="card-body">
+                                        <h5 class="card-title">天狗</h5>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="resource/puzzle/turtle/frame.jpg" class="card-img-top imgsel"
+                                        name="turtle">
+                                    <div class="card-body">
+                                        <h5 class="card-title">制風龜</h5>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="resource/puzzle/snake/frame.jpg" class="card-img-top imgsel" name="snake">
+                                    <div class="card-body">
+                                        <h5 class="card-title">蛇郎君</h5>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="resource/puzzle/coin/frame.jpg" class="card-img-top imgsel" name="coin">
+                                    <div class="card-body">
+                                        <h5 class="card-title">金銀鬼</h5>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <div class="card">
+                                    <img src="resource/puzzle/girl/frame.jpg" class="card-img-top imgsel" name="girl">
+                                    <div class="card-body">
+                                        <h5 class="card-title">金魅</h5>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div id="frame"></div>
+                <div id="game">
+                    <li class="tile" id="1"><span class="number">1</span></li>
+                    <li class="tile" id="2"><span class="number">2</span></li>
+                    <li class="tile" id="3"><span class="number">3</span></li>
+                    <li class="tile" id="4"><span class="number">4</span></li>
+                    <li class="tile" id="5"><span class="number">5</span></li>
+                    <li class="tile" id="6"><span class="number">6</span></li>
+                    <li class="tile" id="7"><span class="number">7</span></li>
+                    <li class="tile" id="8"><span class="number">8</span></li>
+                    <li class="tile" id="blank"><span></span></li>
+                </div>
+                <div id="help"><input type="checkbox" name="enablehelp" onchange="shownumbers();">Enable Help</div>
+                <script src="script.js"></script>
             </div>
         </div>
 
@@ -190,7 +245,7 @@
         crossorigin="anonymous"></script>
 
     <script src="js/allpage.js"></script>
-    <script src="js/shop.js"></script>
+    <script src="js/game.js"></script>
 </body>
 
 </html>
