--- a/monzzle/monsters.html
+++ b/monzzle/monsters.html
@@ -112,6 +112,9 @@
                             <li class="nav-item nav-item-monster">
                                 <a class="nav-link" href="monsters.html">妖怪選單</a>
                             </li>
+                            <li class="nav-item nav-item-game">
+                                <a class="nav-link" href="game.html">小遊戲</a>
+                            </li>
                             <li class="nav-item nav-item-shop">
                                 <a class="nav-link" href="shop.html">商城</a>
                             </li>
@@ -128,32 +131,38 @@
         <div class="menu-items">
             <a class="" href="index.html">
                 <div class="menu-item menu-item-home">
-                    <img src="resource/icon/home.png" class="menu-icon">
+                    <img src="resource/icon/home.svg" class="menu-icon">
                     <div class="menu-item-text">首頁</div>
 
                 </div>
             </a>
             <a class="" href="introduction.html">
                 <div class="menu-item menu-item-aboutus">
-                    <img src="resource/icon/aboutus.png" class="menu-icon">
+                    <img src="resource/icon/aboutus.svg" class="menu-icon">
                     <div class="menu-item-text">關於我們</div>
                 </div>
             </a>
             <a class="" href="subject.html">
                 <div class="menu-item menu-item-subject">
-                    <img src="resource/icon/subject.png" class="menu-icon">
+                    <img src="resource/icon/subject.svg" class="menu-icon">
                     <div class="menu-item-text">專題介紹</div>
                 </div>
             </a>
             <a class="" href="monsters.html">
                 <div class="menu-item menu-item-monster">
-                    <img src="resource/icon/monster.png" class="menu-icon">
+                    <img src="resource/icon/monster.svg" class="menu-icon">
                     <div class="menu-item-text">妖怪選單</div>
+                </div>
+            </a>
+            <a class="" href="game.html">
+                <div class="menu-item menu-item-game">
+                    <img src="resource/icon/game.svg" class="menu-icon">
+                    <div class="menu-item-text">小遊戲</div>
                 </div>
             </a>
             <a class="" href="shop.html">
                 <div class="menu-item menu-item-shop">
-                    <img src="resource/icon/shop.png" class="menu-icon">
+                    <img src="resource/icon/shop.svg" class="menu-icon">
                     <div class="menu-item-text">商城</div>
                 </div>
             </a>
@@ -174,7 +183,7 @@
             <div class="row justify-content-center">
                 <div class="col-10 content-header">
                     <div class="content-header-left">
-                        <img src="resource/icon/monster.png" class="content-header-icon">
+                        <img src="resource/icon/monster.svg" class="content-header-icon">
                         <div class="content-header-title title-text-color">妖怪選單</div>
                     </div>
                     <div class="content-header-right">
@@ -193,6 +202,7 @@
 
                 </div>
             </div>
+            
             <div class="row justify-content-center">
                 <div class="col-8 col-sm-7 col-md-5 monster-content">
                     <img src="resource/banner/9.jpg" class="img-fluid monster-image" id="monster-image">
@@ -220,8 +230,6 @@
     </div>
 
 
-
-
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -229,81 +237,8 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 
-    <script src="resource/js/allpage.js"></script>
-    <script>
-
-        let dataUrl = "resource/json/monster.json";
-
-        $('#goodorbad').change(function () {
-            $.ajax({
-                url: dataUrl,
-                method: 'GET',
-                dataType: 'json',
-                data: '',
-                async: false,
-                success: function (monsterData) {
-                    console.log('success');
-                    // console.log(monsterData);
-                    setName(monsterData);
-                },
-                error: function () {
-                    console.log('error');
-                },
-            });
-        });
-
-        function setName(monsterData) {
-            let select = $('#goodorbad').val();
-            console.log(select);
-            $('#monstername').empty();
-            let firstOption = '<option selected disabled>妖怪名</option>';
-            $('#monstername').append(firstOption);
-            for (let i = 0; i < monsterData.length; i++) {
-                console.log(monsterData[i].name);
-                if (select == monsterData[i].goodorbad) {
-                    console.log(monsterData[i].name);
-                    let newOption = `<option value='${monsterData[i].name}'>${monsterData[i].name}</option>`;
-                    $('#monstername').append(newOption);
-                };
-            };
-        };
-
-        $('#monstername').change(function () {
-            $.ajax({
-                url: dataUrl,
-                method: 'GET',
-                dataType: 'json',
-                data: '',
-                async: false,
-                success: function (monsterData) {
-                    console.log('success');
-                    // console.log(monsterData);
-                    setPage(monsterData);
-                },
-                error: function () {
-                    console.log('error');
-                },
-            });
-        });
-
-        function setPage(monsterData) {
-            let select = $('#monstername').val();
-            for (let i = 0; i < monsterData.length; i++) {
-                if (select == monsterData[i].name) {
-                    $('.spinner').show();
-                    $('#monster-image').attr('src', monsterData[i].image);
-                    $('.monster-name').text(monsterData[i].name);
-                    $('.monster-location').text('地形：' + monsterData[i].location);
-                    $('.monster-type').text('種類：' + monsterData[i].type);
-                    $('.monster-mean').text('意義：' + monsterData[i].mean);
-                    $('.monster-data').text('資料：' + monsterData[i].data);
-                    document.getElementById('monster-image').onload = function () {
-                        $('.spinner').hide();
-                    }
-                }
-            }
-        }
-    </script>
+    <script src="js/allpage.js"></script>
+    <script src="js/monster.js"></script>
 </body>
 
 </html>
