--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -36,7 +36,14 @@
             padding-bottom: 5px;
         }
 
-        /* allpage */
+        .imgsel:hover {
+            cursor: pointer;
+        }
+
+        #img-container-title {
+            color: #513A35;
+            font-weight: bolder;
+        }
     </style>
 </head>
 
@@ -138,7 +145,7 @@
                         <div class="content-header-title title-text-color">小遊戲</div>
                     </div>
 
-                    <div class="content-header-right">
+                    <div style="float: right;">
                         <div id="changeimage"></div>
                     </div>
                 </div>
@@ -233,9 +240,6 @@
         </div>
 
     </div>
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
