--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -9,42 +9,6 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/allpage.css">
     <link rel="stylesheet" href="css/game.css">
-    <style>
-        /* monsters */
-        .content-header-left,
-        .content-header-right {
-            display: inline-block;
-        }
-
-        .col-10 {
-            padding: 10px 0;
-        }
-
-        #changeimage {
-            position: relative;
-            display: inline-block;
-            width: 45px;
-            height: 45px;
-            background-image: url("resource/puzzle/options.png");
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            cursor: pointer;
-        }
-
-        .card-body {
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        .imgsel:hover {
-            cursor: pointer;
-        }
-
-        #img-container-title {
-            color: #513A35;
-            font-weight: bolder;
-        }
-    </style>
 </head>
 
 <body>
@@ -66,22 +30,28 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item nav-item-home">
-                                <a class="nav-link" href="index.html">首頁</a>
+                                <a class="nav-link" href="index.html"><span class="nav-img"
+                                        id="nav-img-home"></span><span class="nav-text">首頁</span></a>
                             </li>
                             <li class="nav-item nav-item-aboutus">
-                                <a class="nav-link" href="introduction.html ">關於我們</a>
+                                <a class="nav-link" href="introduction.html "><span class="nav-img"
+                                        id="nav-img-aboutus"></span><span class="nav-text">關於我們</span></a>
                             </li>
                             <li class="nav-item nav-item-subject">
-                                <a class="nav-link" href="subject.html">專題介紹</a>
+                                <a class="nav-link" href="subject.html"><span class="nav-img"
+                                        id="nav-img-subject"></span><span class="nav-text">專題介紹</span></a>
                             </li>
                             <li class="nav-item nav-item-monster">
-                                <a class="nav-link" href="monsters.html">妖怪選單</a>
+                                <a class="nav-link" href="monsters.html"><span class="nav-img"
+                                        id="nav-img-monster"></span><span class="nav-text">妖怪選單</span></a>
                             </li>
                             <li class="nav-item nav-item-game">
-                                <a class="nav-link" href="game.html">小遊戲</a>
+                                <a class="nav-link" href="game.html"><span class="nav-img"
+                                        id="nav-img-game"></span><span class="nav-text">小遊戲</span></a>
                             </li>
                             <li class="nav-item nav-item-shop">
-                                <a class="nav-link" href="shop.html">商城</a>
+                                <a class="nav-link" href="shop.html"><span class="nav-img"
+                                        id="nav-img-shop"></span><span class="nav-text">商城</span></a>
                             </li>
                         </ul>
                     </div>
