--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -8,75 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/allpage.css">
-    <style>
-        /* index */
-        .banner {
-            width: 100%;
-            height: calc(96vh - 56px);
-            background-size: cover;
-            background-position: center 35%;
-            background-image: url("resource/banner/banner.jpg");
-        }
-
-        .banner-mask {
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.2);
-        }
-
-        .position-left {
-            left: 50%;
-        }
-
-        .logo-bg {
-            background-color: rgba(244, 235, 215, 1) !important;
-            width: 45%;
-            border-radius: 25px;
-            padding: 20px 30px;
-        }
-
-        .logo-img {
-            width: 100%;
-        }
-
-        @media (max-width:1000px) {
-            .logo-bg {
-                padding: 10px 15px;
-            }
-        }
-
-        @media (min-width:1000px) {
-            .position-left {
-                left: calc(50% - 100px);
-            }
-        }
-
-        .content-title {
-            font-size: 30px;
-            border-bottom: 4px solid #513A35;
-            font-weight: bolder;
-            padding: 0 0 5px 20px;
-            margin: 30px 0;
-            color: #513A35;
-        }
-
-        .content-text {
-            font-size: 20px;
-            padding: 0 20px;
-        }
-
-        .content {
-            margin: 40px 0;
-        }
-
-        .content-hover:hover {
-            color: #805F55;
-        }
-
-
-
-        /* allpage */
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -92,29 +24,35 @@
                     <span class="navbar-toggler-icon "></span>
                 </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel" >
+                    aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body show">
+                    <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item nav-item-home">
-                                <a class="nav-link" href="index.html">首頁</a>
+                                <a class="nav-link" href="index.html"><span class="nav-img"
+                                        id="nav-img-home"></span><span class="nav-text">首頁</span></a>
                             </li>
                             <li class="nav-item nav-item-aboutus">
-                                <a class="nav-link" href="introduction.html ">關於我們</a>
+                                <a class="nav-link" href="introduction.html "><span class="nav-img"
+                                        id="nav-img-aboutus"></span><span class="nav-text">關於我們</span></a>
                             </li>
                             <li class="nav-item nav-item-subject">
-                                <a class="nav-link" href="subject.html">專題介紹</a>
+                                <a class="nav-link" href="subject.html"><span class="nav-img"
+                                        id="nav-img-subject"></span><span class="nav-text">專題介紹</span></a>
                             </li>
                             <li class="nav-item nav-item-monster">
-                                <a class="nav-link" href="monsters.html">妖怪選單</a>
+                                <a class="nav-link" href="monsters.html"><span class="nav-img"
+                                        id="nav-img-monster"></span><span class="nav-text">妖怪選單</span></a>
                             </li>
                             <li class="nav-item nav-item-game">
-                                <a class="nav-link" href="game.html">小遊戲</a>
+                                <a class="nav-link" href="game.html"><span class="nav-img"
+                                        id="nav-img-game"></span><span class="nav-text">小遊戲</span></a>
                             </li>
                             <li class="nav-item nav-item-shop">
-                                <a class="nav-link" href="shop.html">商城</a>
+                                <a class="nav-link" href="shop.html"><span class="nav-img"
+                                        id="nav-img-shop"></span><span class="nav-text">商城</span></a>
                             </li>
                         </ul>
                     </div>
