--- a/monzzle/monsters.html
+++ b/monzzle/monsters.html
@@ -8,78 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/allpage.css">
-    <style>
-        /* monsters */
-        .content-header-left,
-        .content-header-right {
-            display: inline-block;
-        }
-
-        .content-header-right {
-            position: relative;
-            top: 8px;
-            display: flex;
-        }
-
-        .content-header-item-mgr {
-            margin-right: 20px;
-        }
-
-
-        .col-10 {
-            padding: 10px 0;
-        }
-
-        .form-select {
-            width: 120px;
-        }
-
-        .form-select-mgl {
-            margin-left: 20px;
-        }
-
-        .monster-text {
-            font-size: 20px;
-            margin-bottom: 2px;
-        }
-
-        .monster-name {
-            font-size: 25px;
-            font-weight: bolder;
-        }
-
-        .monster-content {
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .monster-image {
-            margin: 20px 0;
-        }
-
-        .spinner {
-            width: calc(100% - 200px);
-            height: 100vh;
-            position: fixed;
-            background-color: white;
-            z-index: 10000000000000000000000;
-            margin-top: 4px;
-            display: none;
-        }
-
-        @media (max-width:1000px) {
-            .spinner {
-                width: 100%;
-            }
-        }
-
-        .spinner-border {
-            top: 50vh;
-            position: relative;
-        }
-
-        /* allpage */
-    </style>
+    <link rel="stylesheet" href="css/monster.css">
 </head>
 
 <body>
@@ -101,22 +30,28 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item nav-item-home">
-                                <a class="nav-link" href="index.html">首頁</a>
+                                <a class="nav-link" href="index.html"><span class="nav-img"
+                                        id="nav-img-home"></span><span class="nav-text">首頁</span></a>
                             </li>
                             <li class="nav-item nav-item-aboutus">
-                                <a class="nav-link" href="introduction.html ">關於我們</a>
+                                <a class="nav-link" href="introduction.html "><span class="nav-img"
+                                        id="nav-img-aboutus"></span><span class="nav-text">關於我們</span></a>
                             </li>
                             <li class="nav-item nav-item-subject">
-                                <a class="nav-link" href="subject.html">專題介紹</a>
+                                <a class="nav-link" href="subject.html"><span class="nav-img"
+                                        id="nav-img-subject"></span><span class="nav-text">專題介紹</span></a>
                             </li>
                             <li class="nav-item nav-item-monster">
-                                <a class="nav-link" href="monsters.html">妖怪選單</a>
+                                <a class="nav-link" href="monsters.html"><span class="nav-img"
+                                        id="nav-img-monster"></span><span class="nav-text">妖怪選單</span></a>
                             </li>
                             <li class="nav-item nav-item-game">
-                                <a class="nav-link" href="game.html">小遊戲</a>
+                                <a class="nav-link" href="game.html"><span class="nav-img"
+                                        id="nav-img-game"></span><span class="nav-text">小遊戲</span></a>
                             </li>
                             <li class="nav-item nav-item-shop">
-                                <a class="nav-link" href="shop.html">商城</a>
+                                <a class="nav-link" href="shop.html"><span class="nav-img"
+                                        id="nav-img-shop"></span><span class="nav-text">商城</span></a>
                             </li>
                         </ul>
                     </div>
