--- a/monzzle/shop.html
+++ b/monzzle/shop.html
@@ -7,44 +7,9 @@
     <title>妖來妖去-商城</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/allpage.css">
     <script src="https://unpkg.com/vue@next"></script>
-    <style>
-        /* shop */
-        .allproduct,
-        .bestseller,
-        .newproduct {
-            border-bottom: 4px solid #513A35;
-            padding-bottom: 20px;
-        }
-
-        .content-header-left,
-        .content-header-right {
-            display: inline-block;
-        }
-
-        .content-header-right {
-            position: relative;
-            top: 8px;
-            display: flex;
-        }
-
-        .content-header-item-mgr {
-            margin-right: 20px;
-        }
-
-
-        .col-10 {
-            padding: 10px 0;
-        }
-
-        .form-select {
-            width: 150px;
-        }
-
-
-        /* allpage */
-    </style>
+    <link rel="stylesheet" href="css/allpage.css">
+    <link rel="stylesheet" href="css/shop.css">
 </head>
 
 <body>
@@ -66,22 +31,28 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item nav-item-home">
-                                <a class="nav-link" href="index.html">首頁</a>
+                                <a class="nav-link" href="index.html"><span class="nav-img"
+                                        id="nav-img-home"></span><span class="nav-text">首頁</span></a>
                             </li>
                             <li class="nav-item nav-item-aboutus">
-                                <a class="nav-link" href="introduction.html ">關於我們</a>
+                                <a class="nav-link" href="introduction.html "><span class="nav-img"
+                                        id="nav-img-aboutus"></span><span class="nav-text">關於我們</span></a>
                             </li>
                             <li class="nav-item nav-item-subject">
-                                <a class="nav-link" href="subject.html">專題介紹</a>
+                                <a class="nav-link" href="subject.html"><span class="nav-img"
+                                        id="nav-img-subject"></span><span class="nav-text">專題介紹</span></a>
                             </li>
                             <li class="nav-item nav-item-monster">
-                                <a class="nav-link" href="monsters.html">妖怪選單</a>
+                                <a class="nav-link" href="monsters.html"><span class="nav-img"
+                                        id="nav-img-monster"></span><span class="nav-text">妖怪選單</span></a>
                             </li>
                             <li class="nav-item nav-item-game">
-                                <a class="nav-link" href="game.html">小遊戲</a>
+                                <a class="nav-link" href="game.html"><span class="nav-img"
+                                        id="nav-img-game"></span><span class="nav-text">小遊戲</span></a>
                             </li>
                             <li class="nav-item nav-item-shop">
-                                <a class="nav-link" href="shop.html">商城</a>
+                                <a class="nav-link" href="shop.html"><span class="nav-img"
+                                        id="nav-img-shop"></span><span class="nav-text">商城</span></a>
                             </li>
                         </ul>
                     </div>
@@ -178,9 +149,6 @@
         </div>
 
     </div>
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
