--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -8,63 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/allpage.css">
-    <style>
-        /* introduction */
-        .content-header-left,
-        .content-header-right {
-            display: inline-block;
-        }
-
-        .content-header-item-mgr {
-            margin-right: 20px;
-        }
-
-
-        .col-10 {
-            padding: 10px 0;
-        }
-
-        .member-banner {
-            height: 35vh;
-            width: 100%;
-            background-size: cover;
-            background-position: center center;
-            background-image: url('resource/banner/banner2(small).jpg');
-            margin: 30px 0 0 0;
-        }
-
-        .title-text {
-            font-size: 25px;
-            font-weight: bolder;
-            padding: 0 0 20px 0;
-        }
-
-        .card-img-top {
-            border-radius: 99em !important;
-            padding: 10px;
-        }
-
-        .card {
-            border: 0
-        }
-
-        .subject-img {
-            margin-bottom: 20px;
-        }
-
-        @media (max-width:700px) {
-    .content-header-right {
-        float: left;
-        width: 100%;
-        margin-top: 20px;
-    }
-
-    .content-header-item {
-        top: 0 !important;
-    }
-
-}
-    </style>
+    <link rel="stylesheet" href="css/subject.css">
 </head>
 
 <body>
@@ -86,22 +30,28 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item nav-item-home">
-                                <a class="nav-link" href="index.html">首頁</a>
+                                <a class="nav-link" href="index.html"><span class="nav-img"
+                                        id="nav-img-home"></span><span class="nav-text">首頁</span></a>
                             </li>
                             <li class="nav-item nav-item-aboutus">
-                                <a class="nav-link" href="introduction.html ">關於我們</a>
+                                <a class="nav-link" href="introduction.html "><span class="nav-img"
+                                        id="nav-img-aboutus"></span><span class="nav-text">關於我們</span></a>
                             </li>
                             <li class="nav-item nav-item-subject">
-                                <a class="nav-link" href="subject.html">專題介紹</a>
+                                <a class="nav-link" href="subject.html"><span class="nav-img"
+                                        id="nav-img-subject"></span><span class="nav-text">專題介紹</span></a>
                             </li>
                             <li class="nav-item nav-item-monster">
-                                <a class="nav-link" href="monsters.html">妖怪選單</a>
+                                <a class="nav-link" href="monsters.html"><span class="nav-img"
+                                        id="nav-img-monster"></span><span class="nav-text">妖怪選單</span></a>
                             </li>
                             <li class="nav-item nav-item-game">
-                                <a class="nav-link" href="game.html">小遊戲</a>
+                                <a class="nav-link" href="game.html"><span class="nav-img"
+                                        id="nav-img-game"></span><span class="nav-text">小遊戲</span></a>
                             </li>
                             <li class="nav-item nav-item-shop">
-                                <a class="nav-link" href="shop.html">商城</a>
+                                <a class="nav-link" href="shop.html"><span class="nav-img"
+                                        id="nav-img-shop"></span><span class="nav-text">商城</span></a>
                             </li>
                         </ul>
                     </div>
