--- a/monzzle/game.html
+++ b/monzzle/game.html
@@ -116,7 +116,7 @@
                     </div>
 
                     <div style="float: right;">
-                        <div id="changeimage"></div>
+                        <div id="changeimage">選擇其他妖怪</div>
                     </div>
                 </div>
 
@@ -197,7 +197,6 @@
                     <li class="tile" id="blank"><span></span></li>
                 </div>
                 <div id="help"><input type="checkbox" name="enablehelp" onchange="shownumbers();">Enable Help</div>
-                <script src="script.js"></script>
             </div>
         </div>
 
