--- a/monzzle/subject.html
+++ b/monzzle/subject.html
@@ -141,7 +141,7 @@
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
-                    <div id="designConcept" style="height: 56px; width:100%;"></div>
+                    <div id="designConcept" class="href-text"></div>
                     <div class="title-text title-border">妖怪的起源</div>
                     <div class="concept content-text-color conetnt-padding content-text">
                         在參考的書目中，內容大致分為三個時代-大航海時代、明清時代、日本時代，於是我們先將其分成神界、陸海空及原住民三大類做篩選。​<br /><br />
@@ -158,7 +158,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div>
-                        <div id="standardText" style="height: 56px; width:100%;"></div>
+                        <div id="standardText" class="href-text"></div>
                         <div class="title-text title-border">標準字</div>
                         <div class="row justify-content-center">
                             <div class="col-10">
@@ -178,7 +178,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div>
-                        <div id="standardColor" style="height: 56px; width:100%;"></div>
+                        <div id="standardColor" class="href-text"></div>
                         <div class="title-text title-border">標準色</div>
 
                         <div class="row justify-content-center">
@@ -199,7 +199,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div>
-                        <div id="monsterDesign" style="height: 56px; width:100%;"></div>
+                        <div id="monsterDesign" class="href-text"></div>
                         <div class="title-text title-border">妖怪設計</div>
 
                         <div class="row justify-content-center">
