--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="container-lg">
+        <div class="container-fluid">
             <div class="row justify-content-center content">
                 <div class="col-10 content-title title-text-color">
                     關於我們
@@ -135,7 +135,7 @@
                 </div>
             </div>
 
-            <div class="container-lg">
+            <div class="container-fluid">
                 <div class="row justify-content-center content">
                     <div class="col-10 content-title title-text-color">
                         專題介紹
