--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -186,7 +186,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div class="">
-                        <div id="memberIntroduction" style="height: 56px; width:100%;"></div>
+                        <div id="memberIntroduction" class="href-text"></div>
                         <div class="title-text title-text-color title-border">組員介紹</div>
                         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                             <div class="col">
@@ -264,7 +264,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div class="team">
-                        <div id="teamIntroduction" style="height: 56px; width:100%;"></div>
+                        <div id="teamIntroduction" class="href-text"></div>
                         <div class="title-text title-border">團隊介紹</div>
                         <div class="content-text-color conetnt-text">
                             我們是一群因緣際會下聚在一起的人，團隊總計五人，每個人都有不同的特質與個性，發揮各自的專長，負責不同的工作內容，過程中有爭吵也有歡笑，雖然每周都在趕進度，燃燒肝臟燃燒生命。<br /><br />
