--- a/se4/index.html
+++ b/se4/index.html
@@ -61,30 +61,23 @@
             onloadImg();
         });
 
-        function loadedImg() {
-            setTimeout(function () {
-                $('.loader_bg').hide();
-                loadAnimation();
+        var imgs = [];  					//定義一個運算元組
+        $('.image').each(function () {  	//遍歷所有圖片,將圖片
+            var dfd = $.Deferred();  				//定義一個將要完成某個操作的物件
+            $(this).bind('load', function () {
+                dfd.resolve();  			//圖片載入完成後,表示操作成功
             });
-        }
-
-        function onloadImg() {
-            let imgs = document.querySelectorAll('.image');
-            let x = 0;
-            for (let i = 0; i < imgs.length; i++) {
-                if (imgs[i].complete) {
-                    x++;
-                    console.log(x);
-                } else {
-                    onloadImg();
-                }
+            if (this.complete) {				//如果圖片載入狀態為完成,那麼也標識操作成功
+                setTimeout(function () {
+                    dfd.resolve();
+                }, 2000);
             }
-            if (x == 4) {
-                loadedImg();
-            } else {
-                onloadImg();
-            }
-        };
+            imgs.push(dfd);  			//將所有操作物件放入陣列中
+        })
+        $.when.apply(null, imgs).done(function () {  	//註冊所有操作完成後的執行方法
+            $('.loader_bg').hide();
+            loadAnimation();
+        });
 
 
         function loadAnimation() {
