--- a/monzzle2.0/index.html
+++ b/monzzle2.0/index.html
@@ -82,9 +82,9 @@
     </div>
 
     <section>
-        <img src="bg.jpg" id="bgImg" class="image">
-        <img src="1.png" id="leftImg" class="image">
-        <img src="2.png" id="rightImg" class="image">
+        <img src="bg-min.jpg" id="bgImg" class="image">
+        <img src="1-min.png" id="leftImg" class="image">
+        <img src="2-min.png" id="rightImg" class="image">
     </section>
 
 
