--- a/monzzle2.0/index.html
+++ b/monzzle2.0/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="banner-logo">
-        <img src="logo-x.png" id="logoImg" class="image">
+        <img src="logo-min.png" id="logoImg" class="image">
     </div>
 
     <section>
