--- a/monzzle2.0/index.html
+++ b/monzzle2.0/index.html
@@ -89,7 +89,11 @@
         <img src="resource/2-min.png" id="rightImg" class="image">
     </section>
 
+    <section>
+        
+    </section>
 
+    
 
     <script src="js/menu.js"></script>
     <script>
